docs-archive/apache-airflow-providers-postgres/6.4.0/_sources/_api/airflow/providers/postgres/dialects/postgres/index.rst.txt
airflow.providers.postgres.dialects.postgres
============================================

.. py:module:: airflow.providers.postgres.dialects.postgres


Classes
-------

.. autoapisummary::

   airflow.providers.postgres.dialects.postgres.PostgresDialect


Module Contents
---------------

.. py:class:: PostgresDialect(hook, **kwargs)

   Bases: :py:obj:`airflow.providers.common.sql.dialects.dialect.Dialect`


   Postgres dialect implementation.


   .. py:property:: name
      :type: str



   .. py:method:: get_primary_keys(table, schema = None)

      Get the table's primary key.

      :param table: Name of the target table
      :param schema: Name of the target schema, public by default
      :return: Primary key columns list



   .. py:method:: get_column_names(table, schema = None, predicate = lambda column: True)


   .. py:method:: generate_replace_sql(table, values, target_fields, **kwargs)

      Generate the REPLACE SQL statement.

      :param table: Name of the target table
      :param values: The row to insert into the table
      :param target_fields: The names of the columns to fill in the table
      :param replace: Whether to replace instead of insert
      :param replace_index: the column or list of column names to act as
          index for the ON CONFLICT clause
      :return: The generated INSERT or REPLACE SQL statement



